fix(webapp): position scrollbar to the right so it doesn't overlap data table

--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -161,6 +161,7 @@ fieldset {
 }
 .page {
     margin: 10px;
+    padding-right: 12px;
     height: calc(100vh - 230px);
     overflow-x: hidden;
     overflow-y: auto;
